# vscode-cblite

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build_napi.yml  package.yml
scripts/: build_native.ps1  build_native.sh
src/: extension.ts
src/cblite/: cblite.ts  cbliteCommandValidation.ts
src/cblite/interfaces/: Database.ts
src/cbliteworkspace/: databaseStatusBarItem.ts  documentDatabaseBindings.ts  index.ts
src/common/: index.ts
src/configuration/: index.ts
src/constants/: constants.ts
src/explorer/: explorerTreeProvider.ts  index.ts  treeItem.ts
src/logging/: logger.ts
src/native/: Blob.cc  Blob.hh  Collection.cc  Collection.hh  CouchbaseWrapper.hh  Database.cc  Database.hh  DatabaseConfiguration.cc  DatabaseConfiguration.hh  Document.cc  Document.hh  Query.cc  Query.hh  binding.ts  cblite.cc  cblite.hh
src/providers/: n1ql.provider.ts  sqlpp.provider.ts
src/test/suite/: extension.test.ts
src/utils/: clipboard.ts  files.ts
src/vscodewrapper/: errorMessage.ts  index.ts  quickPick.ts  quickpick.ts  workspace.ts
standalone_test/: test.js
syntaxes/: n1ql.tmLanguage.json  sqlpp.tmLanguage.json
